# embedded_cpp_bootcamp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  COURSE.md  README.md  STYLE.md
benchmarks/: bench_queue.cpp
cmake/toolchains/: aarch64-linux-gnu.cmake
docs/: FINAL_AUDIT_REPORT.md  REQUIREMENTS_COMPLIANCE.md  debugging_labs.md  failure_modes.md  modules_index.md  topic_contract.md
docs/cuda/: README.md
docs/hardware/: jitter.md  mcu.md  sbc.md
firmware/main/: app.c
include/platform/: bounded_queue.hpp  cuda_stage.hpp  logging.hpp  message_bus.hpp  pipeline.hpp  scheduler.hpp  scope_guard.hpp  thread_pool.hpp
modules/01_foundations/: README.md  overview.md  troubleshooting.md
modules/01_foundations/checklists/: mastery.md  review.md  validation.md
modules/01_foundations/exercises/: ex01_scope_guard.md  ex02_message_bus_view.md  ex03_interface_review.md
modules/01_foundations/exercises/ex01_scope_guard/solution/: CMakeLists.txt
modules/01_foundations/exercises/ex01_scope_guard/solution/src/: main.cpp
modules/01_foundations/exercises/ex02_message_bus_view/learner/: CMakeLists.txt
modules/01_foundations/exercises/ex02_message_bus_view/learner/src/: main.cpp
modules/01_foundations/grading/: rubric.json
modules/02_memory/: README.md  overview.md  references.md  troubleshooting.md
modules/02_memory/artifacts/: ex01_bench.txt  ex02_asan.txt  ex03_heaptrack_summary.txt
modules/02_memory/checklists/: mastery.md  review.md  validation.md
modules/02_memory/exercises/ex01_pmr_queue/learner/: CMakeLists.txt
modules/02_memory/exercises/ex01_pmr_queue/learner/src/: main.cpp
modules/02_memory/exercises/ex01_pmr_queue/learner/tests/: README.md
modules/02_memory/exercises/ex02_uaf_fix/solution/: CMakeLists.txt
modules/02_memory/exercises/ex02_uaf_fix/solution/include/: exercise.hpp
modules/02_memory/exercises/ex02_uaf_fix/solution/src/: main.cpp
modules/02_memory/exercises/ex03_heaptrack/solution/: CMakeLists.txt
modules/02_memory/exercises/ex03_heaptrack/solution/include/: exercise.hpp
modules/02_memory/exercises/ex03_heaptrack/solution/src/: main.cpp
modules/03_concurrency/: README.md  overview.md  troubleshooting.md
modules/03_concurrency/exercises/ex01_race_repro/solution/: CMakeLists.txt
modules/03_concurrency/exercises/ex01_race_repro/solution/include/: exercise.hpp
modules/03_concurrency/exercises/ex01_race_repro/solution/src/: main.cpp
modules/03_concurrency/exercises/ex02_deadlock/solution/: CMakeLists.txt
modules/03_concurrency/exercises/ex02_deadlock/solution/include/: exercise.hpp
modules/03_concurrency/exercises/ex02_deadlock/solution/src/: main.cpp
modules/03_concurrency/exercises/ex03_clean_shutdown/learner/: CMakeLists.txt
modules/03_concurrency/exercises/ex03_clean_shutdown/learner/src/: main.cpp
modules/04_architecture/: README.md  overview.md  troubleshooting.md
modules/04_architecture/exercises/ex01_topic_contract/solution/: CMakeLists.txt
modules/04_architecture/exercises/ex01_topic_contract/solution/include/: exercise.hpp
modules/04_architecture/exercises/ex01_topic_contract/solution/src/: main.cpp
modules/04_architecture/exercises/ex02_tracing/solution/: CMakeLists.txt
modules/04_architecture/exercises/ex02_tracing/solution/include/: exercise.hpp
modules/04_architecture/exercises/ex02_tracing/solution/src/: main.cpp
modules/05_scheduling/: README.md  overview.md  troubleshooting.md
modules/05_scheduling/exercises/ex02_timeout_fallback/solution/: CMakeLists.txt
modules/05_scheduling/exercises/ex02_timeout_fallback/solution/src/: main.cpp
modules/05_scheduling/exercises/ex03_priority/learner/: CMakeLists.txt
modules/05_scheduling/exercises/ex03_priority/learner/src/: main.cpp
modules/06_debugging/: README.md  overview.md  troubleshooting.md
modules/07_perf/: README.md  overview.md  troubleshooting.md
modules/07_perf/exercises/ex01_perf_baseline/learner/: CMakeLists.txt
modules/07_perf/exercises/ex01_perf_baseline/learner/include/: exercise.hpp
modules/07_perf/exercises/ex01_perf_baseline/learner/src/: main.cpp
modules/07_perf/exercises/ex03_perf_regression/solution/: CMakeLists.txt
modules/07_perf/exercises/ex03_perf_regression/solution/include/: exercise.hpp
modules/07_perf/exercises/ex03_perf_regression/solution/src/: main.cpp
modules/08_cross_deploy/: README.md  overview.md  troubleshooting.md
modules/08_cross_deploy/exercises/ex02_deploy/learner/: CMakeLists.txt
modules/08_cross_deploy/exercises/ex02_deploy/learner/include/: exercise.hpp
modules/08_cross_deploy/exercises/ex02_deploy/learner/src/: main.cpp
modules/09_mcu/: README.md  overview.md  troubleshooting.md
modules/10_sim/: README.md  overview.md  troubleshooting.md
modules/10_sim/exercises/ex01_qemu/solution/: CMakeLists.txt
modules/10_sim/exercises/ex01_qemu/solution/include/: exercise.hpp
modules/10_sim/exercises/ex01_qemu/solution/src/: main.cpp
modules/10_sim/exercises/ex03_ci_harness/solution/: CMakeLists.txt
modules/10_sim/exercises/ex03_ci_harness/solution/include/: exercise.hpp
modules/10_sim/exercises/ex03_ci_harness/solution/src/: main.cpp
modules/11_cuda_basics/: README.md  overview.md  troubleshooting.md
modules/11_cuda_basics/exercises/ex02_cpu_gpu_parity/solution/: CMakeLists.txt
modules/11_cuda_basics/exercises/ex02_cpu_gpu_parity/solution/include/: exercise.hpp
modules/11_cuda_basics/exercises/ex02_cpu_gpu_parity/solution/src/: main.cpp
modules/12_cuda_perf/: README.md  overview.md  troubleshooting.md
scripts/: build_release.sh  cross_compile_aarch64.sh  deploy_to_sbc.sh  run_sanitizers.sh  run_tests.sh
src/: main.cpp
src/cuda/: CMakeLists.txt  cuda_stage.cu
src/platform/: cuda_stage_cpu.cpp  logging.cpp  message_bus.cpp  pipeline.cpp  scheduler.cpp  thread_pool.cpp
tests/: test_bounded_queue.cpp  test_cuda_stage.cpp  test_message_bus.cpp  test_scheduler.cpp  test_scope_guard.cpp
tools/audit/: audit_links.py  audit_rubrics.py  audit_tree.py  smoke_test_solutions.sh
tools/grader/: README.md  grade.py
(+323 files in other folders)
