cmake_minimum_required(VERSION 3.16)
project(ex01_race_repro_solution LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(ex01_race_repro_tests src/main.cpp)
target_include_directories(ex01_race_repro_tests PRIVATE include)
enable_testing()
add_test(NAME ex01_race_repro_tests COMMAND ex01_race_repro_tests)
