cmake_minimum_required(VERSION 3.16)
project(ex02_timeout_fallback_solution LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(ex02_timeout_fallback_tests src/main.cpp)
target_include_directories(ex02_timeout_fallback_tests PRIVATE include)
enable_testing()
add_test(NAME ex02_timeout_fallback_tests COMMAND ex02_timeout_fallback_tests)
