cmake_minimum_required(VERSION 3.16)
project(ex03_priority_learner LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(ex03_priority_tests src/main.cpp)
target_include_directories(ex03_priority_tests PRIVATE include)
enable_testing()
add_test(NAME ex03_priority_tests COMMAND ex03_priority_tests)
