cmake_minimum_required(VERSION 3.16)
project(ex01_perf_baseline_learner LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(ex01_perf_baseline_tests src/main.cpp)
target_include_directories(ex01_perf_baseline_tests PRIVATE include)
enable_testing()
add_test(NAME ex01_perf_baseline_tests COMMAND ex01_perf_baseline_tests)
