cmake_minimum_required(VERSION 3.16)
project(exercise LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(ENABLE_HARDWARE "Enable hardware path (stub)" OFF)
if(ENABLE_HARDWARE)
  add_compile_definitions(ENABLE_HARDWARE)
endif()
add_executable(exercise_tests src/main.cpp)
target_include_directories(exercise_tests PRIVATE include)
enable_testing()
add_test(NAME exercise_tests COMMAND exercise_tests)
