cmake_minimum_required(VERSION 3.16)
project(exercise LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
option(ENABLE_CUDA "Enable CUDA path (stub)" OFF)
if(ENABLE_CUDA)
  find_package(CUDAToolkit)
  if(CUDAToolkit_FOUND)
    add_compile_definitions(ENABLE_CUDA)
  endif()
endif()
add_executable(exercise_tests src/main.cpp)
target_include_directories(exercise_tests PRIVATE include)
enable_testing()
add_test(NAME exercise_tests COMMAND exercise_tests)
